# dis

./: .gitignore  Cargo.toml  Dockerfile
src/: configuration.rs  discord_authorization.rs  endpoints.rs  main.rs  snowflake.rs  typed_interaction.rs
src/discord/: application_command.rs  interactions.rs  locale.rs  mod.rs  permissions.rs  snowflake.rs
src/discord/gateway/: mod.rs
src/discord/interaction/: mod.rs
src/discord/rest/: application_command.rs  mod.rs
src/discord/voice/: mod.rs
src/discord_api_client/: application_command.rs  mod.rs  permissions.rs
src/domain/: bot.rs  commands.rs  mod.rs  store.rs
src/domain/command_handlers/: echo.rs  get.rs  ls.rs  mod.rs  set.rs
src/domain/interaction_handlers/: echo.rs  get.rs  interaction_command.rs  ls.rs  mod.rs  ping.rs  set.rs
src/domain/interaction_pipeline/: error.rs  mod.rs  ping.rs
src/endpoints/: interaction_pipeline.rs  interactions.rs  mod.rs  post_interactions.rs
src/endpoints/interaction_pipeline/: error.rs  mod.rs  ping.rs
src/endpoints/interaction_pipeline/command_handlers/: echo.rs  get.rs  ls.rs  mod.rs  set.rs
