[package]
name = "disbuster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15"
sea-orm = { version = "0.8.0", default-features = false, features = [
    "runtime-async-std-rustls",
    "sqlx-sqlite",
    "macros",
    "runtime-actix",
] }
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"
async-std = "1.11"
anyhow = { version = "1.0.57" }
log = "0.4"
env_logger = "0.9.0"
serde = { version = "1.0.137", features = ["alloc"] }
serde-aux = "0.2"
serde_repr = "0.1"
signature = "1.3.2"
ed25519 = "1.3.0"
ed25519-dalek = "1.0.1"
hex = "0.4.3"
futures-util = "0.3.21"
async-trait = "0.1.53"
actix-rt = "2.7.0"