[package]
name = "disbuster"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"
log = "0.4"
env_logger = "0.9.0"
serde = { version = "1.0.137", features = ["alloc"] }
serde-aux = "3.0.1"
serde_repr = "0.1"
signature = "1.3.2"
ed25519 = "1.3.0"
ed25519-dalek = "1.0.1"
hex = "0.4.3"
futures-util = "0.3.21"
futures = "0.3.21"
async-trait = "0.1.53"
actix-rt = "2.7.0"
kv = "0.23.1"
serde_json = "1.0.73"
parse-display = "0.5.5"
thiserror = "1.0.31"
mime = "0.3.16"
tokio = "1.18.2"
